force-app/main/default/objects/cg_Quote__c/fields/cg_Account__c.field-meta.xml
<CustomField>
    <fullName>cg_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Cognitive_Quotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>