force-app/main/default/objects/cg_Quote__c/fields/cg_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>cg_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>