force-app/main/default/objects/cg_Quote__c/fields/cg_Quote_number__c.field-meta.xml
<CustomField>
    <fullName>cg_Quote_number__c</fullName>
    <displayFormat>Q -{0000}</displayFormat>
    <label>Quote number</label>
    <type>AutoNumber</type>
</CustomField>